<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.paperboy.paperboy.IntroActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_message"
        android:id="@+id/txtIntro"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/txtIntro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conservative"
            android:id="@+id/btnConservative"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:layout_marginTop="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liberal"
            android:id="@+id/btnLiberal"
            android:background="@color/colorAccent"
            android:layout_below="@+id/btnConservative"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            android:textSize="25dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moderate"
            android:id="@+id/btnModerate"
            android:background="@color/colorAccent"
            android:layout_below="@+id/btnConservative"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name_caps"
        android:id="@+id/txtTitle"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/copyright"
        android:id="@+id/txtCopyright"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</RelativeLayout>
